Closed Bug 1850184 Opened 1 year ago Closed 1 year ago

New wpt failures in /css/css-text/text-transform/text-transform-full-size-kana-008.html

Categories

(Core :: Layout: Text and Fonts, defect)

defect

Tracking

()

RESOLVED FIXED
118 Branch
Tracking Status
firefox118 --- fixed

People

(Reporter: wpt-sync, Assigned: jfkthame)

References

Details

(Whiteboard: [wpt])

Attachments

(1 file)

Syncing wpt PR 41638 found new untriaged test failures in CI

Tests Affected

New Tests That Don't Pass

CI Results

Gecko CI (Treeherder)
GitHub PR Head

Notes

These updates will be on mozilla-central once bug 1850147 lands.

Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.

This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/

If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.

Testing: there's a new WPT (text-transform-full-size-kana-008.html) coming from upstream that will cover this.

Note that the current version of the test, just landed in WPT, has a typo that will cause it to fail if it merges
in its current form. I've left a comment on the WPT commit to get this corrected:
https://github.com/web-platform-tests/wpt/commit/3412a27c237316ef2d4a3167c943dc15c0364766#r125601740)

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d1efba9b9f73 Add support for the Small Kana Extension block to the full-size-kana mapping. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 118 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: