Bug 1850184 - Add support for the Small Kana Extension block to the full-size-kana mapping. r=dholbert

Testing: there's a new WPT (text-transform-full-size-kana-008.html) coming from upstream that will cover this.

Note that the current version of the test, just landed in WPT, has a typo that will cause it to fail if it merges
in its current form. I've left a comment on the WPT commit to get this corrected:
https://github.com/web-platform-tests/wpt/commit/3412a27c237316ef2d4a3167c943dc15c0364766#r125601740)

Differential Revision: https://phabricator.services.mozilla.com/D186883